--- a/style.css
+++ b/style.css
@@ -734,7 +734,9 @@ blockquote p {
 /* *********************************************************
   Clients Logos Section 
 ********************************************************* */
-
+.client{
+  text-align: center;
+}
 .cl-logo-carousel .item figure {
   max-height: 100px;
   margin: 5px;
